fix amount, fee

--- a/TinyManStakingBot/appsettings.json
+++ b/TinyManStakingBot/appsettings.json
@@ -1,11 +1,12 @@
 ﻿{
   "Staking": {
     "AssetId": 452399768,
-    "PoolAssets": [ 553838965, 553854066, 642627416, 657074470, 662102859, 662105729, 662145333, 662166826 ],
-    "MinimumBalanceForStaking": 1000000000,
+    "PoolAssets": [ 553838965, 553854066, 642627416, 657074470, 662102859, 662105729, 662145333, 662166826, 727603343 ],
+    "MinimumBalanceForStaking": 0,
     "MaximumBalanceForStaking": 1000000000000,
-    "InterestRate": 20,
-    "Interval": 3600,
+    "InterestRate": 50,
+    "Interval": 691200,
+    "OffsetSec": 15,
     "ExcludedAccounts": [
       "P65LXHA5MEDMOJ2ZAITLZWYSU6W25BF2FCXJ5KQRDUB2NT2T7DPAAFYT3U",
       "VOTESZMB66LO6CGVREQENOKIBMW4JG2BA7HJUXZBAYDLE6RKM2CQ2YI5EI",
