rename TinyManStakingBot to AMMStakingBot, fix cicd

--- a/.github/workflows/compose.yaml
+++ b/.github/workflows/compose.yaml
@@ -34,4 +34,4 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
       - name: Deploy
-        run: ssh staging 'cd ~/TinyManStakingBot && ./deploy.sh'
+        run: ssh staging 'cd ~/AMMStakingBot && ./deploy.sh'
