rewards note field to show exact origin value, configurable list of rewards pools and interests

--- a/AMMStakingBot/AMMStakingBot.csproj
+++ b/AMMStakingBot/AMMStakingBot.csproj
@@ -9,10 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Algorand2" Version="1.0.0.14" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="NLog" Version="5.1.0" />
+    <PackageReference Include="Algorand2" Version="2.0.0.2023031711" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.1.3" />
   </ItemGroup>
 
   <ItemGroup>
