update sample appsettings, fix weightPoolBalance

--- a/AMMStakingBot/appsettings.json
+++ b/AMMStakingBot/appsettings.json
@@ -3,10 +3,22 @@
     "AssetId": 452399768,
     "List": [
       {
-        "PoolAssets": [ 1075389133 ],
+        "PoolAssets": [ 662102859, 662105729, 662145333, 662166826, 727603343, 1004724816, 1075409920, 1075404862, 1075389133 ],
         "MinimumBalanceForStaking": 0,
         "MaximumBalanceForStaking": 1000000000000,
         "InterestRate": 50
+      },
+      {
+        "PoolAssets": [ 553838965, 553854066, 642627416, 1002644175, 1007553443, 1004747287 ],
+        "MinimumBalanceForStaking": 0,
+        "MaximumBalanceForStaking": 1000000000000,
+        "InterestRate": 30
+      },
+      {
+        "PoolAssets": [ 1075397415 ],
+        "MinimumBalanceForStaking": 0,
+        "MaximumBalanceForStaking": 1000000000000,
+        "InterestRate": 20
       },
       {
         "MinimumBalanceForStaking": 1000000000,
@@ -14,6 +26,7 @@
         "InterestRate": 10
       }
     ],
+    "InterestRate": 0,
     "Interval": 3600,
     "OffsetSec": 15,
     "ExcludedAccounts": [
@@ -72,7 +85,7 @@
       "EY5HJUY3BGHNUDEWZY52OXTY7JJK5MZDITYGJMWYPV4OV64XMN4CTLUQQY",
       "AYQRO4PJINDR3AXK3MAIA76CMPXHRPEBSRCVG2HDEC3BLGCIYEVNAXN6GU"
     ],
-    "DispenserMnemonic": ""
+    "DispenserMnemonic": "discover lounge quick input nut spring today media hair faith cattle hungry pumpkin explain hurdle fabric bind skill diagram legend much wear midnight above space"
   },
   "Algod": {
     "Host": "https://node.algoexplorerapi.io",
